--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chart.js": "^3.5.0",
     "core-js": "^3.15.1",
+    "date-format": "^3.0.0",
     "jquery": "^3.6.0",
     "nuxt": "^2.15.7"
   },
