--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.9.1",
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/toast": "^3.3.1",
     "chart.js": "^3.5.0",
     "core-js": "^3.15.1",
     "date-format": "^3.0.0",
