--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "core-js": "^3.15.1",
     "date-format": "^3.0.0",
     "jquery": "^3.6.0",
-    "nuxt": "^2.15.7"
+    "moment": "^2.29.1",
+    "nuxt": "^2.15.7",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {},
   "resolutions": {
