--- a/.example.env
+++ b/.example.env
@@ -1,2 +1,2 @@
-API_BASE_URL=https://app-one-touch-dev.growthsofts.com
+API_BASE_URL=https://api-neo-touch-dev.growthsofts.com
 API_BASE_URL_LOCAL=http://localhost:8000
