--- a/.example.env
+++ b/.example.env
@@ -1,2 +1,3 @@
 API_BASE_URL=https://dev-app.singa-rdc.com
 API_BASE_URL_LOCAL=http://localhost:8000
+API_BASE_URL_NETWORK=http://192.168.43.74:8000
