--- a/.example.env
+++ b/.example.env
@@ -1,3 +1,3 @@
 API_BASE_URL_ONLINE=
 API_BASE_URL_LOCAL=http://localhost:8000
-API_BASE_URL_NETWORK=http://192.168.43.74:8000
+API_BASE_URL_NETWORK=
